2005-02-02 Akihiro Mizutani <mizutani@net-chef.net>

	* bgp_vty.c: Deprecate "neighbor transparent-as" and "neighbor
	  transparent-nexthop" commands.

2005-02-02 Akihiro Mizutani <mizutani@net-chef.net>

	* bgp_routemap.c: New route-map command - "match ip route-source".

2005-02-02 Akihiro Mizutani <mizutani@net-chef.net>

	* bgp_clist.[ch], bgp_route.c, bgp_routemap.c, bgp_vty.c:
	  community-list cleanup.

2005-02-02 Akihiro Mizutani <mizutani@net-chef.net>

	* bgp_route.c, bgp_vty.c, bgp_zebra.c, bgpd.[ch]: "enforce-multihop"
	  -> "disable-connected-check".

2005-02-02 Akihiro Mizutani <mizutani@net-chef.net>

	* bgp_fsm.c, bgp_open.c, bgp_packet.c, bgp_route.[ch], bgp_vty.c,
	  bgpd.[ch]: Add BGP_INFO_STALE flag and end-of-rib support. "bgp
	  graceful-restart" commands added. Show numbers of individual
	  messages in "show ip bgp neighbor" command. Final pieces of graceful
	  restart.

2005-02-01 Akihiro Mizutani <mizutani@net-chef.net>

	* bgp_open.c, bgp_packet.c, bgp_vty.c, bgpd.[ch]: Remove "no neighbor
	  capability route-refresh" commands. Route refresh capability is sent
	  anyway now. Preserve dummy deprecated commands.

2005-02-01 Akihiro Mizutani <mizutani@net-chef.net>

	* bgp_attr.c, bgp_snmp.c, bgp_vty.c, bgpd.[ch]: Remove support for old
	  draft - ie. "neighbor version 4-" commands. Preserve dummy "neighbor
	  version" command as deprecated.

2005-02-01 Akihiro Mizutani <mizutani@net-chef.net>

	* bgpd.[ch], bgp_vty.c, bgp_route.c: "Restart session after
	  maximum-prefix limit" feature support.

2005-02-01 Akihiro Mizutani <mizutani@net-chef.net>

	* bgp_nexthop.c: Improve debug.
	* bgpd.[ch], bgp_nexthop.c, bgp_snmp.c: Remove useless bgp_get_master()
	  function.
	* bgp_packet.c: MP AFI_IP update and withdraw parsing.
	* bgp_fsm.c: Reset peer synctime in bgp_stop(). bgp_fsm_change_status()
	  is better place to log about peer status change than bgp_event().
	  Log in bgp_connect_success().
	* bgp_vty.c: Fix typo in comment.